--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "meet-between-buns",
   "version": "1.0.0",
   "description": "burger eating and listing application",
+  "engines": {
+    "node": "12.11.1"
+    },
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
